argocd/projects/heimdall/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: heimdall
  namespace: heimdall
spec:
  ingressClassName: nginx
  rules:
  - host: heimdall.legion.lan
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: heimdall
            port:
              number: 80
